feat(northbound): make instance reset destructive
